--- a/arch/arm64/configs/whyred_defconfig
+++ b/arch/arm64/configs/whyred_defconfig
@@ -1,7 +1,7 @@
 CONFIG_THERMAL_SWITCH=y
 CONFIG_PRINT_RPM_CLK_STATUS=y
 CONFIG_KERNEL_CUSTOM_WHYRED=y
-CONFIG_LOCALVERSION="-InsigniuX-LA.UM.7.2.r1-05900-sdm660.0"
+CONFIG_LOCALVERSION="-InsigniuX-LA.UM.7.2.r1-05900-sdm660.0-x15"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
