--- a/arch/arm64/configs/whyred_defconfig
+++ b/arch/arm64/configs/whyred_defconfig
@@ -577,6 +577,7 @@ CONFIG_ION_MSM=y
 CONFIG_QCA_CLD_WLAN=y
 CONFIG_QCACLD_WLAN_LFR3=y
 CONFIG_WLAN_FEATURE_FILS=y
+CONFIG_WLAN_FEATURE_PKT_CAPTURE=y
 CONFIG_PRIMA_WLAN_OKC=y
 CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
 CONFIG_WLAN_FEATURE_11W=y
